Fix layout for video shortcode and its alignment

--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -47,6 +47,17 @@
 	padding-bottom: 0.5em;
 }
 
+@media only screen and ( max-width: 767px ) {
+	.rt-custom-menu-field-item {
+		grid-template-columns: 15em;
+	}
+
+	// stylelint-disable-next-line selector-max-specificity
+	ul:not(.sub-menu) > li > .sub-menu > .rt-custom-menu-field-item {
+		margin-left: 0.7em;
+	}
+}
+
 .rt-custom-menu-field-item-link {
 	width: auto;
 	word-break: break-all;
@@ -54,10 +65,13 @@
 }
 
 // stylelint-disable selector-max-specificity
-li.menu-item-has-children .sub-menu {
-	// Adding css with higher specificity to have the grid layout always.
-	li.rt-custom-menu-field-item {
-		display: grid;
+li.menu-item-has-children {
+	.sub-menu {
+		// Adding css with higher specificity to have the grid layout always.
+		li.rt-custom-menu-field-item {
+			display: grid;
+			max-width: calc( 30em - var(--primary-nav--padding) );
+		}
 	}
 }
 // stylelint-enable selector-max-specificity
@@ -72,3 +86,10 @@ li.menu-item-has-children .sub-menu {
 		padding-bottom: 0.5em;
 	}
 }
+
+// stylelint-disable selector-max-specificity,declaration-no-important
+.sub-menu .rt-wp-menu-custom-fields-shortcode .wp-video-shortcode.mejs-video {
+	// Width added through custom script gets overwritten by core script when video plays, so added width css with !important.
+	width: 100% !important;
+}
+// stylelint-enable selector-max-specificity,declaration-no-important
